--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,40 +78,41 @@
 
   
     <!-- Tasks -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Tasks</h2>
-      <div id="tasks-container"
-        class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar w-full">
-        <!-- task cards -->
-      </div>
-    </section>
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+  <h2 class="text-sm sm:text-base text-[#f0f0f0]">Tasks</h2>
+  <div id="tasks-container"
+    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    <!-- task cards -->
+  </div>
+</section>
 
-    <!-- Lessons -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Lessons</h2>
-      <div id="lessons-container"
-        class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar w-full">
-        <!-- lesson cards -->
-      </div>
-    </section>
+<!-- Lessons -->
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+  <h2 class="text-sm sm:text-base text-[#f0f0f0]">Lessons</h2>
+  <div id="lessons-container"
+    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    <!-- lesson cards -->
+  </div>
+</section>
 
-    <!-- Goals -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Goals</h2>
-      <div id="goals-container"
-        class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar w-full">
-        <!-- goal cards -->
-      </div>
-    </section>
+<!-- Goals -->
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+  <h2 class="text-sm sm:text-base text-[#f0f0f0]">Goals</h2>
+  <div id="goals-container"
+    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    <!-- goal cards -->
+  </div>
+</section>
 
-    <!-- Pinned Notes -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Pinned Notes</h2>
-      <div id="pinned-notes-container"
-        class="flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar w-full">
-        <!-- pinned note cards -->
-      </div>
-    </section>
+<!-- Pinned Notes -->
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+  <h2 class="text-sm sm:text-base text-[#f0f0f0]">Pinned Notes</h2>
+  <div id="pinned-notes-container"
+    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    <!-- pinned note cards -->
+  </div>
+</section>
+
 
   </div>
 
@@ -290,7 +291,7 @@
   </div>
 
   <!-- Site Links Drawer -->
-<div id="siteLinksDrawer" class="fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
+<div id="siteLinksDrawer" class="pointer-events-none fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
   <div class="flex flex-col space-y-3 text-sm">
     <a href="index.html" class="hover:text-[#b91c1c]">Home</a>
     <a href="schedule.html" class="hover:text-[#b91c1c]">Schedule</a>
