--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -82,7 +82,7 @@
   </footer>
 
   <!-- Site Links Drawer -->
-<div id="siteLinksDrawer" class="fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
+<div id="siteLinksDrawer" class="pointer-events-none fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
   <div class="flex flex-col space-y-3 text-sm">
     <a href="index.html" class="hover:text-[#b91c1c]">Home</a>
     <a href="schedule.html" class="hover:text-[#b91c1c]">Schedule</a>
