--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,11 +77,11 @@
   <div class="grid grid-cols-2 gap-5">
 
   
-    <!-- Tasks -->
+  <!-- Tasks -->
 <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
   <h2 class="text-sm sm:text-base text-[#f0f0f0]">Tasks</h2>
   <div id="tasks-container"
-    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
     <!-- task cards -->
   </div>
 </section>
@@ -90,7 +90,7 @@
 <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
   <h2 class="text-sm sm:text-base text-[#f0f0f0]">Lessons</h2>
   <div id="lessons-container"
-    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
     <!-- lesson cards -->
   </div>
 </section>
@@ -99,7 +99,7 @@
 <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
   <h2 class="text-sm sm:text-base text-[#f0f0f0]">Goals</h2>
   <div id="goals-container"
-    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
     <!-- goal cards -->
   </div>
 </section>
@@ -108,10 +108,11 @@
 <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
   <h2 class="text-sm sm:text-base text-[#f0f0f0]">Pinned Notes</h2>
   <div id="pinned-notes-container"
-    class="flex gap-3 w-full overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar sm:overflow-x-visible sm:snap-none">
+    class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
     <!-- pinned note cards -->
   </div>
 </section>
+
 
 
   </div>
