--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -55,52 +55,95 @@
     </div>
   </div>
 </header>
-  <div id="daily">
-  <section id="log-tasks-section">
-    <h2>Today's Tasks</h2>
-    <div id="log-tasks-container"></div>
-  </section>
+ <div id="daily" class="flex flex-col gap-5 p-5">
 
-  <section id="log-lessons-section">
-    <h2>Lessons for Today</h2>
-    <div id="log-lessons-container"></div>
-  </section>
+  <!-- 🔲 2x2 GRID for Today's Core Sections -->
+  <div class="grid grid-cols-2 gap-5">
 
-  <section id="log-goals-section">
-    <h2>Today's Goals</h2>
-    <div id="log-goals-container"></div>
-  </section>
+    <!-- Tasks -->
+    <section id="log-tasks-section" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
+      <div id="log-tasks-container"
+        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 
+               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+        <!-- task cards -->
+      </div>
+    </section>
 
+    <!-- Lessons -->
+    <section id="log-lessons-section" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Lessons for Today</h2>
+      <div id="log-lessons-container"
+        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 
+               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+        <!-- lesson cards -->
+      </div>
+    </section>
 
-  <section id="daily-time-tracker">
-  <h2>Time Tracker</h2>
-  <div>
-    <label for="time-spent">Time spent on focused work (in minutes):</label>
-    <input type="number" id="time-spent" min="0" />
-    <button id="save-time-btn">Save</button>
+    <!-- Goals -->
+    <section id="log-goals-section" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Goals</h2>
+      <div id="log-goals-container"
+        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 
+               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+        <!-- goal cards -->
+      </div>
+    </section>
+
+    <!-- Notes -->
+    <section id="log-notes-section" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Notes</h2>
+      <div id="log-notes-container"
+        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 
+               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+        <!-- note cards -->
+      </div>
+    </section>
+
   </div>
-  <p id="saved-time-text"></p>
-</section>
 
+  <!-- ⏱ Time Tracker -->
+  <section id="daily-time-tracker" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-4">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Time Tracker</h2>
+    <div class="flex flex-col gap-3">
+      <label for="time-spent" class="text-sm">Time spent on focused work (in minutes):</label>
+      <input type="number" id="time-spent" min="0"
+             class="bg-[#2b2b2b] text-white p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-600">
+      <button id="save-time-btn"
+              class="bg-purple-600 text-white px-4 py-2 rounded-md hover:bg-purple-700 transition">Save</button>
+    </div>
+    <p id="saved-time-text" class="text-sm text-green-400"></p>
+  </section>
 
-  <section id="daily-log-form-wrapper">
-    <h2>Personal Log</h2>
-    <form id="daily-log-form">
-      <label for="log-title">Title</label>
-      <input type="text" id="log-title" required>
+  <!-- 📝 Personal Log Form -->
+  <section id="daily-log-form-wrapper" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-4">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Personal Log</h2>
+    <form id="daily-log-form" class="flex flex-col gap-3">
+      <label for="log-title" class="text-sm">Title</label>
+      <input type="text" id="log-title" required
+             class="bg-[#2b2b2b] text-white p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-purple-600">
 
-      <label for="log-content">Reflection</label>
-      <textarea id="log-content" rows="6" required></textarea>
+      <label for="log-content" class="text-sm">Reflection</label>
+      <textarea id="log-content" rows="6" required
+                class="bg-[#2b2b2b] text-white p-2 rounded-md resize-none focus:outline-none focus:ring-2 focus:ring-purple-600"></textarea>
 
-      <button type="submit">Add Log</button>
+      <button type="submit"
+              class="bg-purple-600 text-white px-4 py-2 rounded-md hover:bg-purple-700 transition">Add Log</button>
     </form>
   </section>
 
-  <section id="daily-log-entries-wrapper">
-    <h2>Today's Log</h2>
-    <div id="daily-log-entries"></div>
+  <!-- 📚 Today’s Log Entries -->
+  <section id="daily-log-entries-wrapper" class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Log</h2>
+    <div id="daily-log-entries"
+         class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3 
+                sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      <!-- log cards -->
+    </div>
   </section>
+
 </div>
+
 
   </div>
   <footer class="footer">
