--- a/frontend/weekly.html
+++ b/frontend/weekly.html
@@ -66,8 +66,9 @@
   </div>
 
 <!-- Weekly Reflection Form -->
-<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-4">
-  <h2 class="text-sm sm:text-base text-[#f0f0f0]">Weekly Reflection</h2>
+
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-5 shadow-lg flex flex-col gap-4">
+  <h2 class="text-lg text-[#f0f0f0]">Weekly Reflection</h2>
 
   <label for="what-went-well" class="text-sm">What went well this week?</label>
   <textarea id="what-went-well" rows="4"
