--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,7 +123,7 @@
     <input type="text" id="daily-focus-input" placeholder="What's your main focus today?"
       class="w-full p-2.5 rounded-lg bg-[#121212] border border-[#333] text-sm text-[#e4e4e7]" />
     <button id="save-focus-btn"
-      class="w-fit px-4 py-2 bg-[#4c8eda] text-white font-bold rounded-lg hover:bg-[#3b6fb3] transition-colors">
+      class="w-fit px-4 py-2 bg-purple-600 text-white font-bold rounded-lg hover:bg-[#3b6fb3] transition-colors">
       Save
     </button>
     <p id="saved-focus-text"></p>
