--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -58,8 +58,57 @@
     </div>
   </div>
 </header>
-  <h1 id="heading-schedule">Schedule</h1>
-  <div id="schedule-container"></div>
+<body class="bg-black text-white">
+
+  <div class="page-content">
+    <!-- === NAV === -->
+    <header class="head">...<!-- keep your nav here as is --></header>
+
+    <h1 id="heading-schedule" class="text-center text-xl mt-4 mb-6">Schedule</h1>
+
+    <!-- === 30-Day Grid === -->
+    <div id="schedule-container" class="grid grid-cols-1 sm:grid-cols-2 gap-4 px-4 pb-16">
+      <!-- JS will insert 30 day cards and expandable sections here -->
+    </div>
+  </div>
+
+  <!-- === Template for Each Day Section (clone and fill with cards) === -->
+  <template id="day-expand-template">
+    <div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4">
+      <!-- Tasks -->
+      <section class="bg-[#2b2b2b] p-3 rounded-lg shadow-inner">
+        <h3 class="text-sm text-[#f0f0f0] mb-2">Tasks</h3>
+        <div class="task-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
+          <!-- Task cards go here -->
+        </div>
+      </section>
+
+      <!-- Goals -->
+      <section class="bg-[#2b2b2b] p-3 rounded-lg shadow-inner">
+        <h3 class="text-sm text-[#f0f0f0] mb-2">Goals</h3>
+        <div class="goal-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
+          <!-- Goal cards go here -->
+        </div>
+      </section>
+
+      <!-- Lessons -->
+      <section class="bg-[#2b2b2b] p-3 rounded-lg shadow-inner">
+        <h3 class="text-sm text-[#f0f0f0] mb-2">Lessons</h3>
+        <div class="lesson-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
+          <!-- Lesson cards go here -->
+        </div>
+      </section>
+
+      <!-- Notes -->
+      <section class="bg-[#2b2b2b] p-3 rounded-lg shadow-inner">
+        <h3 class="text-sm text-[#f0f0f0] mb-2">Notes</h3>
+        <div class="note-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
+          <!-- Notes cards go here -->
+        </div>
+      </section>
+    </div>
+  </template>
+
   </div>
   <footer class="footer">
     <span>Eat</span>
