--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -58,11 +58,7 @@
     </div>
   </div>
 </header>
-<body class="bg-black text-white">
-
-  <div class="page-content">
-    <!-- === NAV === -->
-    <header class="head">...<!-- keep your nav here as is --></header>
+<body class="text-white">
 
     <h1 id="heading-schedule" class="text-center text-xl mt-4 mb-6">Schedule</h1>
 
