--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -72,7 +72,7 @@
   <template id="day-expand-template">
     <div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4">
       <!-- Tasks -->
-      <section class="bg-[#2b2b2b] p-3 rounded-lg shadow-inner">
+      <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Tasks</h3>
         <div class="task-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
           <!-- Task cards go here -->
