--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -89,6 +89,14 @@
     <div id="collection-list" class="flex flex-col gap-4"></div>
   </div>
 
+  <!-- 🖥️ Desktop-Only Add Note Button -->
+<button
+  id="add-note-desktop"
+  class="hidden md:flex items-center justify-center fixed bottom-6 right-6 bg-[#b91c1c] hover:bg-red-700 text-white w-12 h-12 rounded-full shadow-lg z-40">
+  +
+</button>
+
+
   <!-- Note Modal -->
   <div id="noteFormPopup" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50 hidden">
     <div class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-6 w-[90%] max-w-xl flex flex-col gap-4 shadow-lg">
