--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -194,7 +194,7 @@
   <!-- 🖥️ Desktop-Only Add Note Button -->
 <button
   id="add-note-desktop"
-  class="hidden md:flex items-center justify-center fixed bottom-6 right-6 bg-[#b91c1c] hover:bg-red-700 text-white w-12 h-12 rounded-full shadow-lg z-40">
+  class="hidden md:flex items-center justify-center fixed bottom-[70px] right-6 bg-[#b91c1c] hover:bg-red-700 text-white w-12 h-12 rounded-full shadow-lg z-40">
   +
 </button>
 <script src="notes.js"></script>
