--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -84,7 +84,7 @@
 
  <!-- Tags Section -->
 <div id="tags-tab" class="tab-content hidden p-4 text-white">
-  <div id="tag-popup" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 items-center justify-center">
+<div id="tag-popup" class="fixed inset-0 bg-black bg-opacity-50 hidden z-50 flex items-center justify-center">
     <div class="bg-[#1f1f1f] rounded-lg p-4 w-[90%] max-w-xl shadow-xl text-white overflow-y-auto max-h-[80vh]">
       <div class="flex justify-between items-center mb-2">
         <h2 class="text-lg font-semibold">Tagged Notes</h2>
