--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -100,6 +100,12 @@
 
   <!-- Tab: Collections -->
   <div id="collections-tab" class="tab-content hidden">
+    <div class="mb-4">
+  <button id="create-collection-btn" class="bg-[#b91c1c] hover:bg-red-700 text-white px-4 py-2 rounded">
+    + New Collection
+  </button>
+</div>
+
     <div id="collection-list" class="flex flex-col gap-4"></div>
   </div>
 
@@ -212,5 +218,6 @@
 <script src="notes.js"></script>
 <script src="nav.js"></script>
 <script src="tags.js"></script>
+<script src="collections.js"></script>
 </body>
 </html>
