--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -172,7 +172,7 @@
 </div>
 
 <!-- Note Preview Popup (for Collections Tab) -->
-<div id="collection-note-preview" class="fixed inset-0 bg-black bg-opacity-60 z-50 hidden flex items-center justify-center p-4">
+<div id="collection-note-preview" class="fixed inset-0 bg-black/70 z-[1000] hidden flex items-center justify-center">
   <div class="bg-[#1f1f1f] rounded-lg shadow-lg p-6 max-w-lg w-full text-white relative">
     <button class="absolute top-2 right-2 text-white hover:text-red-400" onclick="document.getElementById('collection-note-preview').classList.add('hidden')">&times;</button>
     <h3 id="collection-popup-title" class="text-xl font-semibold mb-2"></h3>
