--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -81,7 +81,8 @@
     <p id="current-date"></p>
     <p id="current-time"></p>
   </div>
-  <div id="task-container"></div>
+  <div id="task-container" class="p-4"></div>
+
   
 </div>
 </div>
