--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -70,7 +70,7 @@
 
   <!-- === Template for Each Day Section (clone and fill with cards) === -->
   <template id="day-expand-template">
-<div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4 transition-all transform hover:-translate-y-1 hover:shadow-[0_4px_12px_rgba(76,142,218,0.35)]">
+    <div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4">
       <!-- Tasks -->
       <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Tasks</h3>
